[[releasenotes-26]]

== What's New in OpenNMS Horizon 26

=== System Requirements

* *Java 8 through 11*: OpenNMS Horizon 26 runs on JDK 8 through 11.
  We recommend the most recent version of OpenJDK 11.
* *PostgreSQL 10 or higher*: Horizon 26 requires any supported version of PostgreSQL 10 or higher.

=== Breaking Changes

==== Flow Classification

In versions before Horizon 26, the Flow Classification UI accepted invalid IP address values, e.g., `10,192.1,168.1,5.1-160`.  
When upgrading {opennms-product-name}, existing Flow Classification Rules may be considered invalid. In this case they are silently ignored by the Flow Classification Engine.

In order to assure no invalid Flow Classification Rules exist, please run the OSGi shell command `opennms-classification:list-invalid-rules` to list all invalid rules.
If there are any invalid rules, you must manually fix them using the Flow Classification UI.
For more details, refer to issue https://issues.opennms.org/browse/NMS-12422[NMS-12422].

==== Events and Kafka

Events forwarded to Kafka  are now keyed by `id` rather than `uei`. 

==== Karaf Shell Command Changes

All of the custom Karaf shell commands have now been updated to use a common scope of `opennms`.
This makes it easier to find and enumerate the commands.

Mapping from previous to new commands is as follows:

[options="header, autowidth"]
|===
| Previous Command | New Command 
| `opennms-provision:detect` | `opennms:detect` 
| `opennms-provision:list-detectors` | `opennms:list-detectors` 
| `opennms-provision:show-import` | `opennms:show-import` 
| `opennms-provision:import-requisition` | `opennms:import-requisition` 
| `opennms-dns:lookup` | `opennms:dns-lookup` 
| `opennms-dns:reverse-lookup` | `opennms:dns-reverse-lookup` 
| `opennms-ping:sweep` | `opennms:ping-sweep` 
| `opennms-ping:ping` | `opennms:ping` 
| `opennms-jira:list-projects` | `opennms:jira-list-projects` 
| `opennms-jira:verify` | `opennms:jira-verify` 