@@ -1014,7 +1014,7 @@ public class OnmsNode extends OnmsEntity implements Serializable, Comparable<Onm
         return m_metaData;
     }
 
-    public Optional<OnmsMetaData> getMetaDataForContextAndKey(final String context, final String key) {
+    public Optional<OnmsMetaData> findMetaDataForContextAndKey(final String context, final String key) {
         return getMetaData().stream()
                 .filter(m -> m.getContext().equals(context))
                 .filter(m -> m.getKey().equals(key))
